<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE082"
    tools:context=".ui.mainmenu.MainMenuFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/start_game"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/open_shop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/open_shop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/open_shop"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/open_scoreboard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#AB47BC"
        android:text="@string/exit"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_about_button" />

    <Button
        android:id="@+id/open_about_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#EF5350"
        android:text="@string/about"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_settings_button" />

    <Button
        android:id="@+id/open_settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF7043"
        android:text="@string/settings"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/open_about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_scoreboard_button" />

    <Button
        android:id="@+id/open_scoreboard_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFA726"
        android:text="@string/scorebaord"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/open_settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_shop_button" />

</androidx.constraintlayout.widget.ConstraintLayout>