<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".Views.ui.startgamemenu.StartGameMenuFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:text="@string/start_game"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_to_main_menu_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ff7043"
        android:text="@string/back"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_game_button" />

    <Button
        android:id="@+id/continue_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffa726"
        android:text="@string/continue_game"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/back_to_main_menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_new_game_button" />

    <Button
        android:id="@+id/start_new_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/start_new_game"
        android:textColor="?android:attr/textColorPrimaryNoDisable"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/continue_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>